force-app/main/default/objects/Quality_Record__c/Quality_Record__c.object-meta.xml
<CustomObject>
    <label>Quality Record</label>
    <nameField>
        <displayFormat>QR-{00000000}</displayFormat>
        <label>Quality Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>