force-app/main/default/objects/Quality_Record__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field that indicates the Case QI is linked to.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Quality Records</relationshipLabel>
    <relationshipName>Quality_Records</relationshipName>
    <type>Lookup</type>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
</CustomField>