force-app/main/default/objects/Quality_Record__c/fields/Current_Phase__c.field-meta.xml
<CustomField>
    <fullName>Current_Phase__c</fullName>
    <description>Field that indicates the current phase QI record is in.</description>
    <label>Current Phase</label>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
			<value>
                <fullName>Initiate</fullName>
            </value>
			<value>
                <fullName>Investigate</fullName>
            </value>
			<value>
                <fullName>Approve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>