force-app/main/default/objects/Quality_Record__c/fields/EtQ_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>EtQ_Created_Date__c</fullName>
    <description>Created Date of Quality Records from EtQ</description>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
    <label>EtQ Created Date</label>
    <type>DateTime</type>
</CustomField>