force-app/main/default/objects/Quality_Record__c/fields/EtQ_Integration_Messages__c.field-meta.xml
<CustomField>
    <fullName>EtQ_Integration_Messages__c</fullName>
    <description>Field that stores the Integration messages after API Callout.</description>
    <label>EtQ Integration Messages</label>
    <type>TextArea</type>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
</CustomField>