force-app/main/default/objects/Quality_Record__c/fields/EtQ_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>EtQ_Integration_Status__c</fullName>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
    <description>Field that stores the Integration status after API Callout.</description>
    <label>EtQ Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QI Creation Initiated</fullName>
            </value>
            <value>
                <fullName>QI Creation Successful</fullName>
            </value>
            <value>
                <fullName>QI Creation Failed</fullName>
            </value>
            <value>
                <fullName>Manual Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>