force-app/main/default/objects/Quality_Record__c/fields/EtQ_Number__c.field-meta.xml
<CustomField>
    <fullName>EtQ_Number__c</fullName>
    <externalId>true</externalId>
    <description>Field that stores the EtQ number after API Callout.</description>
    <label>EtQ Number</label>
    <length>255</length>
    <type>Text</type>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
</CustomField>