force-app/main/default/objects/Quality_Record__c/fields/External_URL__c.field-meta.xml
<CustomField>
    <fullName>External_URL__c</fullName>
    <description>Field that stores the URL used to make the API callout to EtQ System.</description>
    <label>External URL</label>
    <type>Url</type>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
</CustomField>