force-app/main/default/objects/Quality_Record__c/fields/Field_Action_Notification__c.field-meta.xml
<CustomField>
    <fullName>Field_Action_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field that indicates the FAN QI is linked to.</description>
    <label>Field Action &amp; Notification</label>
    <referenceTo>Field_Action_Notification__c</referenceTo>
    <relationshipLabel>Quality Records</relationshipLabel>
    <relationshipName>Quality_Records</relationshipName>
    <type>Lookup</type>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
</CustomField>