force-app/main/default/objects/Quality_Record__c/fields/Problem_Title__c.field-meta.xml
<CustomField>
    <fullName>Problem_Title__c</fullName>
    <description>Field that stores the EtQ Problem Title after API Callout.</description>
    <label>Problem Title</label>
    <length>255</length>
    <type>Text</type>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
</CustomField>