force-app/main/default/objects/Quality_Record__c/fields/Quality_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Quality_Record_Type__c</fullName>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
    <description>Field that stores the QI Type after API Callout or by manual creating/Create QI screen.</description>
    <label>Quality Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QI</fullName>
                <default>true</default>
                <label>QI</label>
            </value>
            <value>
                <fullName>SCAR</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>CAPA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>