force-app/main/default/objects/Quality_Record__c/fields/Sites_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Sites_Impacted__c</fullName>
    <description>Field that stores the Sites Impacted after API Callout.</description>
    <label>Sites Impacted</label>
    <length>255</length>
    <type>Text</type>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
</CustomField>