force-app/main/default/objects/Quality_Record__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
    <description>Field that stores the Source after API Callout.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Complaint - Customer SCAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>