force-app/main/default/objects/Quality_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EtQ_Number__c</columns>
    <columns>Sites_Impacted__c</columns>
    <columns>Quality_Record_Type__c</columns>
    <columns>Problem_Title__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>